# colleague-kpi

./: .env.example  .gitignore  README.md  docker-compose.yml
agent/: pyproject.toml
agent/src/agent/: collector.py  config.py  sanitizer.py  scheduler.py  uploader.py
agent/tests/: test_collector.py  test_sanitizer.py  test_scheduler.py  test_uploader.py
docs/: TODO.md  progress.md
docs/superpowers/plans/: 2026-03-28-react-frontend.md  2026-03-28-scoring-engine.md
docs/superpowers/specs/: 2026-03-28-react-frontend-design.md
server/: Dockerfile  pyproject.toml
server/src/server/: config.py  main.py
server/src/server/api/: dashboard.py  deps.py  employees.py  router.py  schemas.py  scores.py  upload.py
server/src/server/db/: models.py  session.py
server/src/server/parsers/: __init__.py  config.py  history.py  orchestrator.py  sessions.py  tasks.py  types.py
server/src/server/scoring/: dimensions.py  engine.py  functions.py  grades.py  orchestrate.py  persist.py
server/tests/: test_config.py  test_config_parser.py  test_dashboard_api.py  test_dimensions.py  test_employees_api.py  test_engine.py  test_grades.py  test_history_parser.py  test_models.py  test_orchestrator.py  test_scores_api.py  test_scoring_functions.py  test_scoring_integration.py  test_scoring_persist.py  test_sessions_parser.py  test_tasks_parser.py  test_upload_api.py
web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
web/src/: App.tsx  index.css  main.tsx
web/src/api/: client.ts  dashboard.ts  employees.ts  scores.ts
web/src/components/: GradeTag.tsx  (+3 more)
(+6 files in other folders)
