[project]
name = "ai-perf-review-agent"
version = "0.1.0"
description = "AI Performance Review - Collection Agent"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.0",
    "apscheduler>=3.10.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agent"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
